<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundPrimary"
    tools:context=".auth.VerifyNumber">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                app:srcCompat="@mipmap/ic_launcher"
                android:contentDescription="@string/logo" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/artifika"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:gravity="center"
                android:text="@string/Verify_number_textView"
                android:textSize="26sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textSize="20sp"
                android:text="@string/VerificationNumber" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:paddingStart="30dp"
                android:paddingEnd="30dp">


                <ImageView
                    android:id="@+id/country_number_image"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_weight="0"
                    app:srcCompat="@drawable/indian"
                    android:contentDescription="@string/India_number" />

                <ImageView
                    android:id="@+id/select_country"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="5dp"
                    android:layout_gravity="center"
                    android:layout_weight="0"
                    app:srcCompat="@android:drawable/arrow_down_float"
                    android:contentDescription="@string/country_number" />

                <EditText
                    android:id="@+id/number_editText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_weight="0"
                    android:maxLength="10"
                    android:ems="10"
                    android:hint="@string/number"
                    android:inputType="phone" />
            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/generate_otp_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="40dp"
                    android:text="@string/generate_otp" />

                <ProgressBar
                    android:id="@+id/numberProgressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_gravity="center"/>
            </FrameLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>