<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundPrimary"
    tools:context=".auth.VerifyNumber">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                app:srcCompat="@mipmap/ic_launcher"
                android:contentDescription="@string/logo" />

            <TextView
                android:id="@+id/verify_otp_main_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/artifika"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:gravity="center"
                android:text="@string/Verify_otp_textView"
                android:textSize="26sp" />

            <TextView
                android:id="@+id/verify_otp_description_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textSize="20sp"
                android:text = "Enter Otp sent to +91 1234 567 890" />

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:orientation="horizontal"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp">

                <EditText
                    android:id="@+id/otp_num1"
                    android:layout_width="40dp"
                    android:layout_height="50dp"
                    android:textSize="35sp"
                    android:paddingStart="10dp"
                    android:maxLength="1"
                    android:layout_margin="5dp"
                    android:background="@drawable/background_otp"
                    android:inputType="number" />

                <EditText
                    android:id="@+id/otp_num2"
                    android:layout_width="40dp"
                    android:layout_height="50dp"
                    android:paddingStart="10dp"
                    android:textSize="35sp"
                    android:layout_margin="5dp"
                    android:background="@drawable/background_otp"
                    android:inputType="number"/>

                <EditText
                    android:id="@+id/otp_num3"
                    android:layout_width="40dp"
                    android:layout_height="50dp"
                    android:paddingStart="10dp"
                    android:maxLength="1"
                    android:textSize="35sp"
                    android:layout_margin="5dp"
                    android:background="@drawable/background_otp"
                    android:inputType="number"/>

                <EditText
                    android:id="@+id/otp_num4"
                    android:layout_width="40dp"
                    android:layout_height="50dp"
                    android:textSize="35sp"
                    android:paddingStart="10dp"
                    android:maxLength="1"
                    android:layout_margin="5dp"
                    android:background="@drawable/background_otp"
                    android:inputType="number"/>

                <EditText
                    android:id="@+id/otp_num5"
                    android:layout_width="40dp"
                    android:layout_height="50dp"
                    android:textSize="35sp"
                    android:paddingStart="10dp"
                    android:maxLength="1"
                    android:layout_margin="5dp"
                    android:background="@drawable/background_otp"
                    android:inputType="number"/>

                <EditText
                    android:id="@+id/otp_num6"
                    android:layout_width="40dp"
                    android:layout_height="50dp"
                    android:textSize="35sp"
                    android:paddingStart="10dp"
                    android:maxLength="1"
                    android:layout_margin="5dp"
                    android:background="@drawable/background_otp"
                    android:inputType="number"/>


            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"
                android:layout_margin="16dp"
                android:layout_gravity="center"
                android:text="@string/don_t_receive_otp"/>
            <TextView
                android:id="@+id/resent_otp_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/colorVibrantPrimary"
                android:fontFamily="@font/artifika"
                android:layout_marginBottom="16dp"
                android:layout_gravity="center"
                android:text="Resend OTP"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/verify_otp_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="40dp"
                    android:text="@string/verify_otp" />

                <ProgressBar
                    android:id="@+id/otpProgressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_gravity="center"/>
            </FrameLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>